--- a/src/main/resources/templates/community/articles.html
+++ b/src/main/resources/templates/community/articles.html
@@ -12,10 +12,16 @@
     </div>
 
     <div class="row">
-        <div class="col">
+        <div class="col-lg-6 mb-2">
+            <button class="btn btn-warning float-start"
+                    onclick="location.href='index.html'"
+                    th:onclick="|location.href='@{/}'|"
+                    type="button">모임목록</button>
+        </div>
+        <div class="col-lg-6">
             <button class="btn btn-primary float-end"
                     onclick="location.href='formAdd.html'"
-                    th:onclick="|location.href='@{/community/articles/add}'|"
+                    th:onclick="|location.href='@{/community/{gatheringId}/articles/add(gatheringId=${gatheringId})}'|"
                     type="button">인증하기</button>
         </div>
     </div><!-- /row -->
@@ -23,12 +29,12 @@
     <hr class="my-4">
 
     <div class="row">
-        <div class="col-lg-12 offset-md-4 mb-4" th:each="article : ${articles}">
-            <div class="card" style="width: 18rem;">
+        <div class="col-lg-12 mb-4" th:each="article : ${articles}">
+            <div class="card mx-auto" style="width: 20rem;">
                 <img src="#" th:src="${article.imagePath}" class="card-img-top" alt="sample">
                 <div class="card-body">
-                    <h5 class="card-title" th:text="${article.userId}">유저ID</h5>
-                    <a href="#" class="btn btn-primary" th:href="@{|/community/articles/${article.id}|}">상세</a>
+                    <h5 class="card-title" th:text="${article.nickname}">유저ID</h5>
+                    <a href="#" class="btn btn-primary" th:href="@{|/community/${article.gatheringId}/articles/${article.articleId}|}">상세</a>
                     <a href="#" class="btn btn-secondary">댓글</a>
                     <a href="#" class="btn btn-danger">하트</a>
                 </div>
