--- a/src/main/resources/templates/article/articleList.html
+++ b/src/main/resources/templates/article/articleList.html
@@ -20,7 +20,7 @@
 
             <button class="btn btn-primary float-end"
                     onclick="location.href='formAdd.html'"
-                    th:onclick="|location.href='@{/community/{gatheringId}/articles/add(gatheringId=${gatheringId})}'|"
+                    th:onclick="|location.href='@{/communities/{communityId}/articles/add(communityId=${communityId})}'|"
                     type="button">인증하기</button>
         </div>
     </div><!-- /row -->
@@ -33,7 +33,7 @@
                 <img src="#" th:src="${article.imagePath}" class="card-img-top" alt="sample">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${article.nickname}">유저ID</h5>
-                    <a href="#" class="btn btn-primary" th:href="@{|/community/${article.gatheringId}/articles/${article.articleId}|}">상세</a>
+                    <a href="#" class="btn btn-primary" th:href="@{|/communities/${article.communityId}/articles/${article.articleId}|}">상세</a>
                 </div>
             </div>
         </div>
