모임 생성하기, 가입하기 구현 및 기존 코드 중 사용하지 않는 코드들 삭제

--- a/src/main/resources/templates/article/articleList.html
+++ b/src/main/resources/templates/article/articleList.html
@@ -9,6 +9,9 @@
 <div class="container" style="max-width: 600px">
     <div class="py-5 text-center">
         <h2>#오운완</h2>
+        <form th:action="@{/communities/{communityId}/delete(communityId=${communityId})}" method="post">
+            <button type="submit" class="btn btn-sm btn-danger">모임삭제</button>
+        </form>
     </div>
 
     <div class="row">
