--- a/src/main/resources/templates/article/articleList.html
+++ b/src/main/resources/templates/article/articleList.html
@@ -18,7 +18,7 @@
         <div class="col-lg-12 mb-2">
             <button class="btn btn-warning float-start"
                     onclick="location.href='index.html'"
-                    th:onclick="|location.href='@{/}'|"
+                    th:onclick="|location.href='@{/users/home}'|"
                     type="button">모임목록</button>
 
             <button class="btn btn-primary float-end"
